--- a/inst/htmlwidgets/timevis.yaml
+++ b/inst/htmlwidgets/timevis.yaml
@@ -1,4 +1,9 @@
 dependencies:
+  - name: moment
+    version: 2.17.1
+    src: htmlwidgets/lib/moment-2.17.1
+    script: moment-with-locales.min.js
+
   - name: vis-timeline
     version: 4.16.1
     src: htmlwidgets/lib/vis-timeline-4.16.1
